// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse html should parse html 1`] = `
ElementNode {
  "attributes": Object {},
  "children": Array [
    TextNode {
      "type": 1,
      "value": "
			",
    },
    ElementNode {
      "attributes": Object {
        "test": "a",
      },
      "children": Array [
        TextNode {
          "type": 1,
          "value": "hello",
        },
      ],
      "tag": "div",
      "type": 0,
    },
    TextNode {
      "type": 1,
      "value": "
		",
    },
  ],
  "tag": "html",
  "type": 0,
}
`;

exports[`parse html should parse html 2`] = `
ElementNode {
  "attributes": Object {},
  "children": Array [
    ElementNode {
      "attributes": Object {},
      "children": Array [
        TextNode {
          "type": 1,
          "value": "Hello, world!",
        },
      ],
      "tag": "body",
      "type": 0,
    },
  ],
  "tag": "html",
  "type": 0,
}
`;
